# backend

./: .env.example  README.md  commands.txt  db.sql  docker-compose.yml  encryption.py  main.py  pyproject.toml  server.sh  test_connection.py
auth/: auth.py  dependencies.py
databases/: database.py  db_service.py  oauth_state_service.py
init-db/: 01-create-database.sql
integrations/: spotify.py  whoop.py
routers/: app_routes.py  auth_routes.py  spotify.py  spotify_routes.py  whoop.py  whoop_routes.py
