[project]
name = "backend"
version = "0.1.0"
description = "FitPro fitness app backend with Spotify and Whoop integrations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
